--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^1.1.5",
-    "styled-components": "^5.3.11",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "styled-components": "^5.3.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.1.3"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "babel-plugin-styled-components": "^2.1.4"
   }
 }
