--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-plugin-styled-components": "^2.1.4",
-    "eslint": "^8.44.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint": "^8.47.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
