--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nanoid": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.0.6",
     "stylis": "^4.3.0"
