--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build:client": "rm -rf build && cd ../client && npm run build && cp -r build ../server",
+    "build:client": "rm -rf build && cd ../client && npm run install && npm run build && cp -r build ../server",
     "deploy:full": "npm run build:client && git add . && git commit -m client_build && git push"
   },
   "keywords": [],
