--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build:client": "rm -rf build && cd ../client && npm install && npm run build && cp -r build ../server",
-    "deploy:full": "npm run build:client && git add . && git commit -m client_build && git push"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
