--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^8.2.0"
   },
   "devDependencies": {
